--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  lint: ^1.5.3
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+  intl: ^0.17.0
+  validators: ^3.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,6 +38,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.0.1
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
