--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   validators: ^3.0.0
   provider: ^5.0.0
 
+  sizer: ^2.0.11
+  device_preview: ^0.7.1
+
   simple_animations: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
