--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sizer: ^2.0.11
   device_preview: ^0.7.1
 
+  flare_flutter: ^3.0.0
   simple_animations: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +58,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/flares/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
