--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sizer: ^2.0.11
   device_preview: ^0.7.1
 
+  animate_do: ^2.0.0
   flare_flutter: ^3.0.0
   simple_animations: ^3.0.3
 
