--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.17.0
   validators: ^3.0.0
   provider: ^5.0.0
+  shared_preferences: ^2.0.5
 
   sizer: ^2.0.11
   device_preview: ^0.7.1
