--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -32,12 +32,12 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.5
 
-  sizer: ^2.0.11
+  sizer: ^2.0.12
   device_preview: ^0.7.1
 
   animate_do: ^2.0.0
   flare_flutter: ^3.0.0
-  simple_animations: ^3.0.3
+  simple_animations: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
